--- a/projekt-innowacja/force-app/main/default/classes/MyFirstClass.cls
+++ b/projekt-innowacja/force-app/main/default/classes/MyFirstClass.cls
@@ -1,6 +1,8 @@
 public with sharing class MyFirstClass {
     public MyFirstClass() {
-        System.debug('varName >>');
+        System.debug('varName >> asdasd');
+        System.debug('varName >> asdasd');
+        System.debug('varName >> asdasd');
         Integer i;
     }
 }
