Revert "test done"
This reverts commit 738ba0a3d5272092aff03af23e803bc47c15e0f0.

--- a/projekt-innowacja/force-app/main/default/classes/MyFirstClass.cls
+++ b/projekt-innowacja/force-app/main/default/classes/MyFirstClass.cls
@@ -1,8 +1,6 @@
 public with sharing class MyFirstClass {
     public MyFirstClass() {
-        System.debug('varName >> asdasd');
-        System.debug('varName >> asdasd');
-        System.debug('varName >> asdasd');
+        System.debug('varName >>');
         Integer i;
     }
 }
