--- a/projekt-innowacja/force-app/main/default/classes/MyFirstClass.cls
+++ b/projekt-innowacja/force-app/main/default/classes/MyFirstClass.cls
@@ -2,5 +2,6 @@ public with sharing class MyFirstClass {
     public MyFirstClass() {
         System.debug('varName >>');
         Integer i;
+        Account acc = [SELECT ID, NAme FROM Account];
     }
 }
