--- a/projekt-innowacja/force-app/main/default/classes/MyFirstClass.cls
+++ b/projekt-innowacja/force-app/main/default/classes/MyFirstClass.cls
@@ -5,5 +5,6 @@ public with sharing class MyFirstClass {
         Account acc = [SELECT ID, NAme FROM Account];
         Case case = [SELECT Id FROM CAse];
         Case case = [SELECT Id FROM CAse];
+        System.debug(CASE);
     }
 }
